--- a/edit_course/templates/edit_course/submissiontag_list.html
+++ b/edit_course/templates/edit_course/submissiontag_list.html
@@ -23,7 +23,7 @@
 	<div class="card-header bg-primary">
 		<h5 class="card-title text-white">{% translate "SUBMISSION_TAGS" %}</h5>
 	</div>
-	<table class="table table-striped table-bordered table-sm mb-0">
+	<table class="table table-striped aplus-table-bordered table-sm mb-0">
 		<tr>
 			<th>{% translate "TAG" %}</th>
 			<th>{% translate "SLUG" %}</th>
