--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -32,7 +32,7 @@
 
 		<td>
 			{% if item.pin %}
-			<i class="bi-pushpin" aria-hidden="true"></i>
+			<i class="bi bi-pin-angle-fill" aria-hidden="true"></i>
 			{% endif %}
 			{{ item.publish }}
 		</td>
