--- a/assets/sass/components/_news.scss
+++ b/assets/sass/components/_news.scss
@@ -1,13 +1,5 @@
 .news-panel {
     margin-bottom: 30px;
-    .future-instance {
-        color: #c0322d;
-        background-color: #fff;
-    }
-    .current-instance {
-        color: #333;
-        background-color: #fff;
-    }
     .list-group-item-heading {
         padding-top: 5px;
         padding-bottom: 10px;
@@ -27,27 +19,37 @@
         position: relative;
         display: block;
         padding: 10px 15px;
+        border: none;
+    }
+    .list-group-item:last-child {
+        border-bottom-left-radius: var(--bs-card-inner-border-radius);
+        border-bottom-right-radius: var(--bs-card-inner-border-radius);
     }
     .pinned-list-group-item {
         border-left: 2px solid $aplus-brand-primary;
-        border-bottom: 1px solid #ccc;
+    }
+    .news-item.pinned-list-group-item:last-child {
+        border-bottom-left-radius: var(--bs-card-inner-border-radius);
     }
     .folding-list-group-item {
-        background-color: #fff;
         font-size: 16px;
         text-decoration: none;
         font-weight: bold;
-        border-bottom-left-radius: 0px;
-        border-bottom-right-radius: 0px;
     }
     .folding-list-group-item.collapsed {
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
+        border-bottom-left-radius: var(--bs-card-inner-border-radius);
+        border-bottom-right-radius: var(--bs-card-inner-border-radius);
     }
     .folding-list-group-item:hover {
-        background-color: #eee;
+        background-color: var(--bs-secondary-bg);
     }
     .list-group-item-text *:last-child {
         margin-bottom: 0;
+    }
+    .bi-chevron-down::before {
+        transition: transform .2s ease;
+    }
+    .folding-list-group-item[aria-expanded="true"] .bi-chevron-down::before {
+        transform: rotate(180deg);
     }
 }
