--- a/assets/sass/components/_table.scss
+++ b/assets/sass/components/_table.scss
@@ -10,3 +10,44 @@ table {
 		display: none !important;
 	}
 }
+
+/* Bootstrap 5 table variants do not have color mode adaptive styling (will be added in v6) */
+.table-striped > tbody > tr.table-success > th,
+.table-striped > tbody > tr.table-success > td {
+	--bs-table-color-type: var(--bs-body-color);
+    --bs-table-bg-type: var(--bs-success-bg-subtle);
+}
+
+.table-striped > tbody > tr.table-success:nth-of-type(2n+1) > th,
+.table-striped > tbody > tr.table-success:nth-of-type(2n+1) > td {
+	--bs-table-color-type: var(--bs-body-color);
+    --bs-table-bg-type: var(--bs-success-bg-subtle);
+}
+
+/* Fix borders for bordered tables within cards */
+.aplus-table-bordered > thead > tr > th:not(:first-child),
+.aplus-table-bordered > thead > tr > td:not(:first-child),
+.aplus-table-bordered > tbody > tr > td:not(:first-child) {
+	border-left: 1px solid var(--bs-border-color);
+}
+
+.aplus-table-bordered > tbody > tr:not(.hidden-group):not(:has(~ tr:not(.hidden-group))) > th,
+.aplus-table-bordered > tbody > tr:not(.hidden-group):not(:has(~ tr:not(.hidden-group))) > td {
+    border-bottom: none;
+}
+
+.aplus-table-bordered > tbody > tr:not(.hidden-group):not(:has(~ tr:not(.hidden-group))) > th,
+.aplus-table-bordered > tbody > tr:not(.hidden-group):not(:has(~ tr:not(.hidden-group))) > td:first-child {
+    border-bottom-left-radius: var(--bs-border-radius);
+}
+
+.aplus-table-bordered > tbody > tr:not(.hidden-group):not(:has(~ tr:not(.hidden-group))) > th,
+.aplus-table-bordered > tbody > tr:not(.hidden-group):not(:has(~ tr:not(.hidden-group))) > td:last-child {
+    border-bottom-right-radius: var(--bs-border-radius);
+}
+
+.aplus-table-bordered > tbody > tr.table-success,
+.aplus-table-bordered > tbody > tr.table-success > td {
+	border-left: none;
+	border-bottom: 1px solid var(--bs-border-color);
+}
