--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -106,6 +106,8 @@ iframe {
 	}
 }*/ // TODO: CHECK FOR REMOVAL #1442
 
+
+
 /* dropdown menu */
 .dropdown-menu > li button {
 	display: block;
@@ -123,6 +125,12 @@ iframe {
 	/*&:hover {
 		background: #eee;
 	}*/
+}
+
+.dropdown-toggle.btn {
+    --bs-btn-border-width: 0;
+    --bs-btn-focus-border-color: transparent;
+    --bs-btn-active-border-color: transparent;
 }
 
 /* Skip links */
