--- a/edit_course/templates/edit_course/usertag_edit.html
+++ b/edit_course/templates/edit_course/usertag_edit.html
@@ -15,12 +15,14 @@
 <br />
 <form method="post" class="card form-horizontal">
 	{% csrf_token %}
-	<legend>{% translate "EDIT_STUDENT_TAG" %}</legend>
-	{% bootstrap_form form %}
-	<div class="form-group">
-		<div class="col-sm-10 col-sm-offset-2">
-			<button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
-			<a href="{{ instance|url:'course-tags' }}" role="button" class="aplus-button--secondary aplus-button--md">{% translate "CANCEL" %}</a>
+	<div class="card-body">
+		<legend>{% translate "EDIT_STUDENT_TAG" %}</legend>
+		{% bootstrap_form form %}
+		<div class="form-group">
+			<div class="col-sm-10 col-sm-offset-2">
+				<button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
+				<a href="{{ instance|url:'course-tags' }}" role="button" class="aplus-button--secondary aplus-button--md">{% translate "CANCEL" %}</a>
+			</div>
 		</div>
 	</div>
 </form>
