--- a/exercise/templates/exercise/staff/inspect_submission.html
+++ b/exercise/templates/exercise/staff/inspect_submission.html
@@ -70,9 +70,9 @@
 				{% if exercise.max_submissions %}
 					{% if is_teacher or is_assistant and submission.exercise.allow_assistant_grading %}
 						<form
+						    class="d-inline"
 							method="post"
 							action="{{ submission|url:'submission-increase-max' }}"
-							style="display:inline;"
 							title="{% translate 'ADD_ONE_EXTRA_SUBMISSION_FOR_STUDENT_IN_EXERCISE' %}"
 						>
 							{% csrf_token %}
