--- a/course/templates/course/enroll.html
+++ b/course/templates/course/enroll.html
@@ -7,7 +7,7 @@
 {% block view_tag %}enroll{% endblock %}
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "ENROLLMENT" %}</li>
+<li class="breadcrumb-item active">{% translate "ENROLLMENT" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
