--- a/course/templates/course/groups.html
+++ b/course/templates/course/groups.html
@@ -10,7 +10,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "MY_GROUPS" %}</li>
+<li class="breadcrumb-item active">{% translate "MY_GROUPS" %}</li>
 {% endblock %}
 
 {% block columns %}
