--- a/course/templates/course/staff/all_submissions_table.html
+++ b/course/templates/course/staff/all_submissions_table.html
@@ -10,7 +10,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "ALL_SUBMISSIONS" %}</li>
+<li class="breadcrumb-item active">{% translate "ALL_SUBMISSIONS" %}</li>
 {% endblock %}
 
 {% block columns %}
