--- a/course/templates/course/staff/groups.html
+++ b/course/templates/course/staff/groups.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "GROUPS" %}</li>
+<li class="breadcrumb-item active">{% translate "GROUPS" %}</li>
 {% endblock %}
 
 {% block columns %}
