--- a/edit_course/templates/edit_course/batch_assess.html
+++ b/edit_course/templates/edit_course/batch_assess.html
@@ -8,7 +8,7 @@
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "BATCH_CREATE_AND_ASSESS_SUBMISSIONS" %}</li>
+<li class="breadcrumb-item active">{% translate "BATCH_CREATE_AND_ASSESS_SUBMISSIONS" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
