--- a/edit_course/templates/edit_course/edit_content.html
+++ b/edit_course/templates/edit_course/edit_content.html
@@ -5,7 +5,7 @@
 {% load django_bootstrap5 %}
 
 {% block editbreadcrumblist %}
-<li class="active">{% translate "EDIT_COURSE" %}</li>
+<li class="breadcrumb-item active">{% translate "EDIT_COURSE" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
