--- a/edit_course/templates/edit_course/edit_gitmanager.html
+++ b/edit_course/templates/edit_course/edit_gitmanager.html
@@ -5,7 +5,7 @@
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "GITMANAGER" %}</li>
+<li class="breadcrumb-item active">{% translate "GITMANAGER" %}</li>
 {% endblock %}
 {% block view_tag %}edit-course,gitmanager-details{% endblock %}
 
