--- a/edit_course/templates/edit_course/edit_index.html
+++ b/edit_course/templates/edit_course/edit_index.html
@@ -6,7 +6,7 @@
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "INDEX" %}</li>
+<li class="breadcrumb-item active">{% translate "INDEX" %}</li>
 {% endblock %}
 {% block view_tag %}edit-course,course-index{% endblock %}
 
