--- a/edit_course/templates/edit_course/edit_instance.html
+++ b/edit_course/templates/edit_course/edit_instance.html
@@ -7,7 +7,7 @@
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "DETAILS" %}</li>
+<li class="breadcrumb-item active">{% translate "DETAILS" %}</li>
 {% endblock %}
 {% block view_tag %}edit-course,course-details{% endblock %}
 
