--- a/exercise/templates/exercise/staff/list_submitters.html
+++ b/exercise/templates/exercise/staff/list_submitters.html
@@ -7,7 +7,7 @@
 
 {% block exercisebreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "ALL_SUBMITTERS" %}</li>
+<li class="breadcrumb-item active">{% translate "ALL_SUBMITTERS" %}</li>
 {% endblock %}
 
 {% block columns %}
