--- a/exercise/templates/exercise/template.html
+++ b/exercise/templates/exercise/template.html
@@ -6,7 +6,7 @@
 
 {% block exercisebreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "EXERCISE_TEMPLATE" %}</li>
+<li class="breadcrumb-item active">{% translate "EXERCISE_TEMPLATE" %}</li>
 {% endblock %}
 
 {% block exercisecontent %}
