--- a/exercise/templates/exercise/toc.html
+++ b/exercise/templates/exercise/toc.html
@@ -9,7 +9,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "COURSE_MATERIALS" %}</li>
+<li class="breadcrumb-item active">{% translate "COURSE_MATERIALS" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
