--- a/external_services/templates/external_services/list_menu.html
+++ b/external_services/templates/external_services/list_menu.html
@@ -8,7 +8,7 @@
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "MENU_ITEMS" %}</li>
+<li class="breadcrumb-item active">{% translate "MENU_ITEMS" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
