--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "EDIT_NEWS" %}</li>
+<li class="breadcrumb-item active">{% translate "EDIT_NEWS" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
