--- a/course/templates/course/staff/group_edit.html
+++ b/course/templates/course/staff/group_edit.html
@@ -9,8 +9,8 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li><a href="{{ instance|url:'groups-list' }}">{% translate "GROUPS" %}</a></li>
-<li class="active">{% translate "EDIT" %}</li>
+<li class="breadcrumb-item"><a href="{{ instance|url:'groups-list' }}">{% translate "GROUPS" %}</a></li>
+<li class="breadcrumb-item active">{% translate "EDIT" %}</li>
 {% endblock %}
 
 {% block columns %}
