--- a/course/templates/course/staff/participants.html
+++ b/course/templates/course/staff/participants.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "PARTICIPANTS" %}</li>
+<li class="breadcrumb-item active">{% translate "PARTICIPANTS" %}</li>
 {% endblock %}
 
 {% block columns %}
