--- a/deviations/templates/deviations/list_dl.html
+++ b/deviations/templates/deviations/list_dl.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "LIST_DEADLINE_DEVIATIONS" %}</li>
+<li class="breadcrumb-item active">{% translate "LIST_DEADLINE_DEVIATIONS" %}</li>
 {% endblock %}
 
 {% block columns %}
