--- a/diploma/templates/diploma/list.html
+++ b/diploma/templates/diploma/list.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "GRADES" %}</li>
+<li class="breadcrumb-item active">{% translate "GRADES" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
