--- a/edit_course/templates/edit_course/clone_instance.html
+++ b/edit_course/templates/edit_course/clone_instance.html
@@ -6,7 +6,7 @@
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "INSTANCES" %}</li>
+<li class="breadcrumb-item active">{% translate "INSTANCES" %}</li>
 {% endblock %}
 {% block view_tag %}edit-course,course-clone{% endblock %}
 
