--- a/edit_course/templates/edit_course/remove_model.html
+++ b/edit_course/templates/edit_course/remove_model.html
@@ -6,7 +6,7 @@
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li class="active">
+<li class="breadcrumb-item active">
 	{% blocktranslate trimmed with model=model_name %}
 		REMOVE_MODEL -- {{ model }}
 	{% endblocktranslate %}
