--- a/edit_course/templates/edit_course/submissiontag_list.html
+++ b/edit_course/templates/edit_course/submissiontag_list.html
@@ -7,7 +7,7 @@
 
 {% block editbreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "SUBMISSION_TAGS" %}</li>
+<li class="breadcrumb-item active">{% translate "SUBMISSION_TAGS" %}</li>
 {% endblock %}
 {% block view_tag %}edit-course,course-submission-tags{% endblock %}
 
