--- a/exercise/templates/exercise/results.html
+++ b/exercise/templates/exercise/results.html
@@ -10,7 +10,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "EXERCISE_RESULTS" %}</li>
+<li class="breadcrumb-item active">{% translate "EXERCISE_RESULTS" %}</li>
 {% endblock %}
 
 {% block coursecontent %}
