--- a/exercise/templates/exercise/staff/analytics.html
+++ b/exercise/templates/exercise/staff/analytics.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "VISUALIZATIONS" %}</li>
+<li class="breadcrumb-item active">{% translate "VISUALIZATIONS" %}</li>
 {% endblock %}
 
 {% block columns %}
@@ -80,7 +80,7 @@
 				{% translate "DOWNLOAD_CSV" %}
 			</a>
 			<button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				
+
 				<span class="visually-hidden">{% translate "TOGGLE_DROPDOWN" %}</span>
 			</button>
 			<ul class="dropdown-menu">
