--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "ALL_RESULTS" %}</li>
+<li class="breadcrumb-item active">{% translate "ALL_RESULTS" %}</li>
 {% endblock %}
 
 {% block scripts %}
