--- a/exercise/templates/exercise/submission.html
+++ b/exercise/templates/exercise/submission.html
@@ -7,7 +7,7 @@
 
 {% block exercisebreadcrumblist %}
 {{ block.super }}
-<li class="active">{% translate "SUBMISSION" %} {{ index }}</li>
+<li class="breadcrumb-item active">{% translate "SUBMISSION" %} {{ index }}</li>
 {% endblock %}
 
 {% block exercisecontent %}
