--- a/external_services/templates/external_services/launch.html
+++ b/external_services/templates/external_services/launch.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{{ service.menu_label|parse_localization }}</li>
+<li class="breadcrumb-item active">{{ service.menu_label|parse_localization }}</li>
 {% endblock %}
 
 {% block scripts %}
